@@ -38,6 +38,7 @@ Readonly::Hash my %default_config => {
     key_history             => "Alt-h",
     key_retilehosts         => "Alt-r",
     key_paste               => "Control-v",
+    key_username            => "Alt-u",
     mouse_paste             => "Button-2",
     auto_quit               => "yes",
     auto_close              => 5,
@@ -495,6 +496,7 @@ key_history=Alt-h
 key_paste=Control-v
 key_quit=Control-q
 key_retilehosts=Alt-r
+key_username=Alt-u
 lang=en
 max_addhost_menu_cluster_items=6
 max_host_menu_items=30
